<?xml version="1.0" encoding="utf-8"?>
<!--
/******************************************************************************
 *     Copyright (C) by ETHZ/SED                                              *
 *                                                                            *
 *   This program is free software: you can redistribute it and/or modify     *
 *   it under the terms of the GNU Affero General Public License as published *
 *   by the Free Software Foundation, either version 3 of the License, or     *
 *   (at your option) any later version.                                      *
 *                                                                            *
 *   This program is distributed in the hope that it will be useful,          *
 *   but WITHOUT ANY WARRANTY; without even the implied warranty of           *
 *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the            *
 *   GNU Affero General Public License for more details.                      *
 *                                                                            *
 *                                                                            *
 *   @author: Billy Burgoa Rosso                                              *
 *   Independent Consultant       <billyburgoa@gmail.com>                     *
 *                                                                            *
 ******************************************************************************/
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alertConstrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbkgd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView37"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:text="@string/eqalert"
            android:textAlignment="center"
            android:textColor="#05F611"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/alertIntensityDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:text="@string/alert_intesitytitle"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/alertIntensityValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:background="#FFEB3B"
            android:text="VI. Fuerte"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView42"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:text="@string/alert_hl_strongEQ"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FF1201"
            android:textSize="48sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView45"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:text="@string/alert_magtitle"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:text="@string/alert_depthtitle"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alertMagValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:text="5.9"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/alertDepthValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:text="35 km"
                android:textAlignment="center"
                android:textColor="#D8D8D8"
                android:textSize="34sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/alertDistanceDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:text="35 km al Sur Oeste de casa (POI) asdsad asdasdsa asdasdsa asdsadsa"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/alertSourceValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:text="@string/alert_sourcetitle"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/alertmap"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:context="com.bbr.Alerting"
                tools:layout="@layout/dummylayout" />

            <Button
                android:id="@+id/alertButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#304FFE"
                android:text="@string/alert_button_title"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/alertmap"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="@+id/alertmap"
                app:layout_constraintTop_toTopOf="@+id/alertmap"
                app:layout_constraintVertical_bias="0.89" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>